create tags endpoints
